@@ -19,6 +19,7 @@ Version 5.9.7
 - Optimized local variable push/pull (thanks Ada)
 - Reduced number of temporary registers needed by the compiler
 - Fixed a bug in DIR$() in subdirectories of SD cards
+- New BASIC keyword `LABEL` to allow defining labels at end of statements
 
 Version 5.9.6
 - Added error for non-constant compile time initializers
